# discord-pet-overlay

./: .eslintrc.json  .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-windows.yml  release.yml
docs/: RELEASE_GUIDE.md
scripts/: build-and-upload-updater.sh  generate-icons.mjs  sign-and-upload.sh  sync-version.mjs
src/: interaction-mode.ts  main.ts  settings-window.ts  settings.css  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/anim/: index.ts  pet.ts
src/api/: client.test.ts  client.ts  index.ts
src/store/: config.ts  index.ts  spriteCache.ts
src/ui/: index.ts
